--- a/src/app/demo/components/dashboard/dashboard.component.html
+++ b/src/app/demo/components/dashboard/dashboard.component.html
@@ -128,6 +128,7 @@
             </ng-template>
 
             <ng-template pTemplate="right">
+                <!-- <button pButton pRipple label="Exportar Todo" icon="pi pi-upload" class="p-button-help mr-1" (click)="dt.exportCSV({allValues: true})"></button> -->
                 <button pButton pRipple label="Exportar" icon="pi pi-upload" class="p-button-help" (click)="dt.exportCSV()"></button>
             </ng-template>
         </p-toolbar>
