Payment export added

--- a/src/app/demo/components/dashboard/dashboard.component.html
+++ b/src/app/demo/components/dashboard/dashboard.component.html
@@ -129,6 +129,7 @@
 
             <ng-template pTemplate="right">
                 <!-- <button pButton pRipple label="Exportar Todo" icon="pi pi-upload" class="p-button-help mr-1" (click)="dt.exportCSV({allValues: true})"></button> -->
+                <button pButton pRipple label="Exportar Pagos" icon="pi pi-upload" class="mr-2 p-button-help" (click)="exportPayments()"></button>
                 <button pButton pRipple label="Exportar" icon="pi pi-upload" class="p-button-help" (click)="dt.exportCSV()"></button>
             </ng-template>
         </p-toolbar>
